change *.html to *.liquid

--- a/_config.yml
+++ b/_config.yml
@@ -258,7 +258,7 @@ scholar:
   join_strings: true
 
   details_dir: bibliography
-  details_layout: bibtex.html
+  details_layout: bibtex.liquid
   details_link: Details
 
   query: "@*"
