--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ impressum_path: # set to path to include impressum link in the footer, use the s
 # -----------------------------------------------------------------------------
 
 # code highlighter theme
-highlight_theme_light: perldoc # https://github.com/jwarby/jekyll-pygments-themes
+highlight_theme_light: autumn # https://github.com/jwarby/jekyll-pygments-themes
 highlight_theme_dark: monokai # https://github.com/jwarby/jekyll-pygments-themes
 
 # repo color theme
