--- a/_config.yml
+++ b/_config.yml
@@ -2,16 +2,17 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
+title: Yifan Jiang # the website title (if blank, full name will be used instead)
 first_name: Yifan
 middle_name:
 last_name: Jiang
 email: yifan.jiang@maths.ox.ac.uk
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
+  Personal website of Yifan Jiang.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-keywords: # add your own keywords or leave empty
+keywords: Yifan Jiang, math, 蒋亦凡 # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: favicon.ico # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
